[package]
name = "rust-os"
version = "0.1.0"
authors = ["Seth <swidoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This crate implements a basic BIOS bootloader without any C dependencies, just Rust and inline assembly.
bootloader = "0.9.2"
spin = "0.5.2"
uart_16550 = "0.2.7"
volatile = "0.2.6"
x86_64 = "0.11.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

# Disable stack unwinding which requires OS specific libraries.

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false