[package]
name = "rust-os"
version = "0.1.0"
authors = ["Seth <swidoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This crate implements a basic BIOS bootloader without any C dependencies, just Rust and inline assembly.
bootloader = {version = "*", features = ["map_physical_memory"]}
linked_list_allocator = "*"
pc-keyboard = "*"
pic8259_simple = "*"
spin = "*"
uart_16550 = "*"
volatile = "*"
x86_64 = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

# Disable stack unwinding which requires OS specific libraries.

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false